[project]
name = "waltax"
version = "0.1.0"
description = ""
authors = [
    {name = "Walter Sobral Andrade",email = "wsacin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "uwsgi (>=2.0.29,<3.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "marshmallow (>=4.0.0,<5.0.0)",
    "debugpy (>=1.8.14,<2.0.0)"
]

[tool.poetry]
packages = [{include = "waltax", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
